--- a/ATMusic/Controllers/ChartViewController/CustomTableViewCell/TrackTableViewCell.xib
+++ b/ATMusic/Controllers/ChartViewController/CustomTableViewCell/TrackTableViewCell.xib
@@ -57,6 +57,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Yi-qJ-zB1" userLabel="MoreView">
                                 <rect key="frame" x="190" y="0.0" width="95" height="60"/>
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4:32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="zqc-ab-IgJ">
+                                        <rect key="frame" x="36" y="24" width="22" height="13"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="11"/>
+                                        <color key="textColor" red="0.32549019607843138" green="0.34509803921568627" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDV-u2-I1l">
                                         <rect key="frame" x="78" y="22" width="17" height="17"/>
                                         <constraints>
@@ -71,16 +77,12 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="MDV-u2-I1l" secondAttribute="trailing" id="75y-iH-4TY"/>
+                                    <constraint firstItem="zqc-ab-IgJ" firstAttribute="centerY" secondItem="6Yi-qJ-zB1" secondAttribute="centerY" id="KMc-bV-T3g"/>
+                                    <constraint firstItem="MDV-u2-I1l" firstAttribute="leading" secondItem="zqc-ab-IgJ" secondAttribute="trailing" constant="20" id="k20-gM-M9F"/>
                                     <constraint firstItem="MDV-u2-I1l" firstAttribute="width" secondItem="6Yi-qJ-zB1" secondAttribute="width" multiplier="18/98" id="uPy-dF-XZg"/>
                                     <constraint firstItem="MDV-u2-I1l" firstAttribute="centerY" secondItem="6Yi-qJ-zB1" secondAttribute="centerY" id="xD1-n0-TdV"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="4:32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="zqc-ab-IgJ">
-                                <rect key="frame" x="235" y="23" width="22" height="13"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="11"/>
-                                <color key="textColor" red="0.32549019607843138" green="0.34509803921568627" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
