--- a/ATMusic/Controllers/ChartViewController/TrackCell/TrackTableViewCell.xib
+++ b/ATMusic/Controllers/ChartViewController/TrackCell/TrackTableViewCell.xib
@@ -18,24 +18,24 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="Slq-E1-nBv">
-                        <rect key="frame" x="18" y="5" width="60" height="60"/>
+                        <rect key="frame" x="15" y="5" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Slq-E1-nBv" secondAttribute="height" multiplier="1:1" id="LO9-N2-nHn"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mHL-aJ-w4I" userLabel="ContentView">
-                        <rect key="frame" x="78" y="5" width="285" height="60"/>
+                        <rect key="frame" x="75" y="5" width="285" height="60"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rgg-BC-sJm" userLabel="MainView">
                                 <rect key="frame" x="0.0" y="0.0" width="190" height="60"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The song name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="Fna-Bv-UGh">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sing me to sleep" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="Fna-Bv-UGh">
                                         <rect key="frame" x="8" y="0.0" width="174" height="30"/>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name of singer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="cNS-lx-0Yl">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="alan walker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="cNS-lx-0Yl">
                                         <rect key="frame" x="8" y="30" width="174" height="30"/>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="11"/>
                                         <color key="textColor" red="0.32549019607843138" green="0.34509803921568627" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
@@ -58,13 +58,13 @@
                                 <rect key="frame" x="190" y="0.0" width="95" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4:32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="zqc-ab-IgJ">
-                                        <rect key="frame" x="36" y="24" width="22" height="13"/>
+                                        <rect key="frame" x="37" y="24" width="22" height="13"/>
                                         <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="11"/>
                                         <color key="textColor" red="0.32549019607843138" green="0.34509803921568627" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDV-u2-I1l">
-                                        <rect key="frame" x="78" y="22" width="17" height="17"/>
+                                        <rect key="frame" x="79" y="23" width="15" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="MDV-u2-I1l" secondAttribute="height" multiplier="1:1" id="Mbd-Wx-KKQ"/>
                                         </constraints>
@@ -76,10 +76,10 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="MDV-u2-I1l" secondAttribute="trailing" id="75y-iH-4TY"/>
+                                    <constraint firstAttribute="trailing" secondItem="MDV-u2-I1l" secondAttribute="trailing" constant="1" id="75y-iH-4TY"/>
                                     <constraint firstItem="zqc-ab-IgJ" firstAttribute="centerY" secondItem="6Yi-qJ-zB1" secondAttribute="centerY" id="KMc-bV-T3g"/>
                                     <constraint firstItem="MDV-u2-I1l" firstAttribute="leading" secondItem="zqc-ab-IgJ" secondAttribute="trailing" constant="20" id="k20-gM-M9F"/>
-                                    <constraint firstItem="MDV-u2-I1l" firstAttribute="width" secondItem="6Yi-qJ-zB1" secondAttribute="width" multiplier="18/98" id="uPy-dF-XZg"/>
+                                    <constraint firstItem="MDV-u2-I1l" firstAttribute="width" secondItem="6Yi-qJ-zB1" secondAttribute="width" multiplier="16/95" constant="-1.4489795918367356" id="uPy-dF-XZg"/>
                                     <constraint firstItem="MDV-u2-I1l" firstAttribute="centerY" secondItem="6Yi-qJ-zB1" secondAttribute="centerY" id="xD1-n0-TdV"/>
                                 </constraints>
                             </view>
@@ -104,7 +104,7 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Slq-E1-nBv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="B2w-CV-ETL"/>
+                    <constraint firstItem="Slq-E1-nBv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="7" id="B2w-CV-ETL"/>
                     <constraint firstItem="mHL-aJ-w4I" firstAttribute="leading" secondItem="Slq-E1-nBv" secondAttribute="trailing" id="DWM-m8-rVA"/>
                     <constraint firstAttribute="bottomMargin" secondItem="mHL-aJ-w4I" secondAttribute="bottom" id="Fkb-Bt-5zw"/>
                     <constraint firstAttribute="trailingMargin" secondItem="mHL-aJ-w4I" secondAttribute="trailing" id="JLu-qR-aVE"/>
@@ -136,6 +136,6 @@
     </objects>
     <resources>
         <image name="avatar" width="173" height="173"/>
-        <image name="more" width="30" height="30"/>
+        <image name="more" width="15" height="15"/>
     </resources>
 </document>
