--- a/ATMusic/Controllers/ChartViewController/ChartViewController.xib
+++ b/ATMusic/Controllers/ChartViewController/ChartViewController.xib
@@ -17,17 +17,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z81-vD-SBb">
-                    <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Z81-vD-SBb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1qA-Be-NyS"/>
-                <constraint firstItem="Z81-vD-SBb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="Kon-nD-FD7"/>
+                <constraint firstItem="Z81-vD-SBb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Kon-nD-FD7"/>
                 <constraint firstAttribute="trailing" secondItem="Z81-vD-SBb" secondAttribute="trailing" id="iuT-lA-eCL"/>
-                <constraint firstAttribute="bottom" secondItem="Z81-vD-SBb" secondAttribute="bottom" constant="49" id="kpa-lK-pop"/>
+                <constraint firstAttribute="bottom" secondItem="Z81-vD-SBb" secondAttribute="bottom" id="kpa-lK-pop"/>
             </constraints>
+            <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-12.5" y="416.5"/>
         </view>
